--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,7 +25,7 @@
         "@nestjs/core": "^10.3.0",
         "@nestjs/jwt": "^10.2.0",
         "@nestjs/passport": "^10.0.3",
-        "@nestjs/platform-express": "^10.3.0",
+        "@nestjs/platform-express": "^10.4.20",
         "@nestjs/swagger": "^7.1.17",
         "@nestjs/throttler": "^5.1.1",
         "@prisma/client": "^5.7.1",
@@ -34,12 +34,16 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "ioredis": "^5.3.2",
-        "minio": "^7.1.3",
+        "mammoth": "^1.11.0",
+        "minio": "^7.1.4",
+        "multer": "^2.0.2",
         "openai": "^4.24.0",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
+        "pdf-parse": "^1.1.4",
         "reflect-metadata": "^0.2.1",
         "rxjs": "^7.8.1",
+        "xlsx": "^0.18.5",
         "zod": "^3.22.4"
     },
     "devDependencies": {
@@ -49,6 +53,7 @@
         "@types/bcryptjs": "^2.4.6",
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.11",
+        "@types/multer": "^2.0.0",
         "@types/node": "^20.10.5",
         "@types/passport-jwt": "^4.0.0",
         "jest": "^29.7.0",
